# flutter_launch_arguments_ffi

./: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.claude/: settings.local.json
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: android_args.c
android/src/main/java/com/example/flutter_launch_arguments_ffi/: FlutterLaunchArgumentsFfiPlugin.java
docs/: flutter_launch_arguments_ffi_spm_guide.md
example/: README.md  pubspec.yaml
example/.maestro/: README.md  launch_arguments_test.yaml  launch_arguments_test_enabled_true.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: platform_guard_test.dart  widget_test.dart
ios/: Package.swift  flutter_launch_arguments_ffi.podspec
ios/Classes/: flutter_launch_arguments_ffi.c
ios/Sources/flutter_launch_arguments_ffi/: FlutterLaunchArgumentsFfiPlugin.swift  ios_args.m
ios/Sources/flutter_launch_arguments_ffi/include/: launch_arguments.h
lib/: flutter_launch_arguments_ffi.dart  flutter_launch_arguments_ffi_bindings_generated.dart
lib/src/: flutter_launch_arguments_bindings_generated.dart  launch_arguments_interface.dart  launch_arguments_native.dart  launch_arguments_unsupported.dart  launch_arguments_web.dart
src/: CMakeLists.txt  flutter_launch_arguments_ffi.c
(+1 files in other folders)
